# laughing-octo-waffle

./: README.md  agent.MD  config.yaml  pyproject.toml  warrants_searcher_v6_fixed_3.py
.github/workflows/: python-script.yml
dashboard/: app.js  index.html  styles.css
docs/plans/: 2026-02-18-config-design.md  2026-02-18-config-implementation-plan.md  2026-02-18-ema-pullback-design.md  2026-02-18-relative-strength-design.md
tests/: test_days_to_maturity.py  test_fx.py  test_theta_scoring.py
warrant_scanner/: config.py  main.py  models.py  tickers.py
warrant_scanner/analysis/: assets.py  indicators.py
warrant_scanner/onvista/: client.py  details.py
warrant_scanner/reporting/: export.py
warrant_scanner/scoring/: option_scoring.py
warrant_scanner/util/: fx.py
