[project]
name = "warrant-scanner"
version = "0.1.0"
description = "Onvista warrants/optionsschein scanner with technical prefiltering and scoring."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "18thParadise-colla" }]
dependencies = [
  "yfinance>=0.2.50",
  "pandas>=2.0",
  "numpy>=1.24",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
addopts = "-q"
